# LLMiri

./: README.md  requirements.txt
LLM_gazebo/: CMakeLists.txt  README.md  package.xml
LLM_gazebo/config/: object_descriptions.yaml
LLM_gazebo/launch/: custom_panda.launch  robot.launch
LLM_gazebo/msg/: NameDescriptionPair.msg  ObjectDescriptionList.msg
LLM_gazebo/src/: object_description_publisher.py
control/: CMakeLists.txt  README.md  control_plugin.xml  package.xml
control/config/: controller_config.yaml
control/include/control/: read_only_controller_Node.h
control/launch/: read_only_controller.launch
control/src/: DesiredCartesianPublisher.py  EndEffTrajectoryManager.py  GripperManager.py  generateDmpTraj.py  moveClass.py  read_only_controller_Node.cpp
control/src/my_dmpbbo/: dmp_ori.py  my_dmpbbo.py
control/src/testing/: dmp_test.py  test_straight_line.py
control/src/utils/: utils.py
control/srv/: GetObjectPose.srv  GetPose.srv  GraspObject.srv  OpenGripper.srv  SetInt.srv  SetPose.srv  WaitForGoal.srv
gazebo/launch/: custom_panda.launch  robot.launch
hl_control/: CMakeLists.txt  README.md  package.xml
hl_control/src/: LLM_to_controller.py  LLM_to_controller_2.py  launch_nodes.py  run_example.py
hl_control/srv/: StringIn.srv
ll_control/: CMakeLists.txt  ll_control_plugin.xml  move_arm.py  package.xml  trajectory_utils.py
ll_control/config/: controller_config.yaml
ll_control/include/ll_control/: end_effector_state_Node_Handle.h  read_only_controller_Node.h
ll_control/launch/: read_only_controller.launch
ll_control/src/: DesiredCartesianNodePub.py  DesiredCartesianPublisher.py  EndEffTrajectoryManager.py  dmp_test.py  dmp_v00.py  end_effector_state_NodeHandle.cpp  generateDmpTraj.py  moveClass.py  only_dmp_test.py  read_only_controller_Node.cpp  utils.py
ll_control/src/_dmpbbo/: Dmp.py  DynamicalSystem.py  ExponentialSystem.py  FunctionApproximator.py  Parameterizable.py  RichardsSystem.py  SigmoidSystem.py  SpringDamperSystem.py  TimeSystem.py
ll_control/src/my_dmpbbo/: dmp_ori.py  my_dmpbbo.py
ll_control/src/testing/: dmp_test.py  only_dmp_test.py  test_straight_line.py
ll_control/srv/: SetDmp.srv  SetFloat.srv
transformer/: CMakeLists.txt  README.md  gemma2_9b.py  package.xml  test_gemma_2.js
transformer/msg/: CallLLMlist.msg  CallLLMsingle.msg
transformer/src/: callLLM.py  create_rosbridge_srv.py  fast.py  interfaceLLM_node.py  rosbridgeLLM_interface.py  rosbridgeLLM_interface_OG.py  rosbridgeLLMinterface_class.py
transformer/src/rosbridge/: callLLM.py  create_rosbridge_srv.py  rosbridgeLLM_interface_OG.py  rosbridgeLLMinterface_class.py
transformer/src/rosmelodic/: llm_node.py
transformer/srv/: CallLLM.srv  CallLLM_long.srv  GetCartesianStiffnessFromDescription.srv  GetGripperForceFromDescription.srv  GetObjectPoseFromDescription.srv
transformer/test/: test_rosbridge.py
transformer/test/models/: gemma2_9b.py  microsoft_phi_128k.py
