<?xml version="1.0"?>
<package format="2">
  <name>llm_gazebo</name>
  <version>0.10.1</version>
  <description>
  Testing TODO
  </description>
  <maintainer email="carribalzaga@iri.upc.edu">Carlos Arribalzaga Jové</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <depend>pluginlib</depend>
  <depend>urdf</depend>
  <depend>gazebo_ros_control</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>