<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  <version>0.10.1</version>
  <description>
  Testing TODO
  </description>
  <maintainer email="carribalzaga@iri.upc.edu">Carlos Arribalzaga Jové</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_msgs</build_depend>


  <depend>controller_interface</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/control_plugin.xml"/>
  </export>
</package>